--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
 body{
-    background-color: lavenderblush;
+    background-color: beige;
+    font-family: 'Roboto Mono', monospace;
+    font-size: 15;
 }
