--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 body{
-    background-color: beige;
+    background-color: background-image: -webkit-gradient(linear, left top, left bottom, from(pink), to(red));
+    background-image: -webkit-linear-gradient(top, pink, red);
+    background-image: -moz-linear-gradient(top, pink, red);
+    background-image: linear-gradient(to bottom, pink, red);
+    
     font-family: 'Roboto Mono', monospace;
-    font-size: 30px;
+    font-size: 20px;
 }
